Improve form styling and hopefully fix overflow of pages bc of decor

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,6 +5,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  overflow: auto;
 }
 
 body { overflow-x: hidden; }
@@ -214,6 +215,11 @@ img { border-radius: .25rem; }
     height: 8rem;
     overflow: hidden;
   }
+}
+
+.form-page {
+  max-width: 1024px;
+  padding: 4rem 2rem;
 }
 
 .main-image {
